# chatbot

./: README.md  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_04_30_0951-5f52fa8831d8_base.py  2025_05_01_2347-f8b41fbb55eb_added_custom_ai_knowledge_and_.py  2025_05_03_1323-496881e8dde4_modified_intpk_to_uuidpk.py  2025_05_04_1631-f660dfc0f669_fixed_and_enhanced_model_foreignkeys_.py  2025_05_04_1719-5d69942c6171_update_field_name_in_custom_ai.py  2025_05_04_1725-1a592c92fb37_added_default_model.py  2025_05_06_2324-4a72792dc15a_made_knowledge_based_and_custom_ai_.py  2025_05_09_2326-fabe16a72c02_added_api_key.py  2025_05_11_1503-fe7f444c471c_switched_defaule_model_to_deepseek_ai_.py
app/: db.py  main.py  settings.py
app/daos/: api_key.py  custom_ai.py  knowledge_base.py  personality.py  user.py
app/middleware/: api_key.py  csrf.py  request_logger.py
app/models/: __init__.py  api_key.py  base.py  custom_ai.py  knowledge_base.py  personality.py  user.py
app/routers/: api_key.py  api_router.py  custom_ai.py  huggingface.py  knowledge_base.py  personality.py  user.py
app/schemas/: api_key.py  custom_ai.py  knowledge_base.py  personality.py  token.py  user.py
app/services/: ai_service.py  api_key.py  custom_ai.py  huggingface.py  knowledge_base.py  personality.py  user.py  utils.py
